--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   shared_preferences: ^0.4.1
   dio: ^3.0.7 #latest version
   transparent_image: ^1.0.0
+  intl: ^0.16.1
 
 
   # The following adds the Cupertino Icons font to your application.
