--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <application
         android:name="io.flutter.app.FlutterApplication"
         android:label="Itinerary Wallet"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@drawable/ic_launcher">
         
         <activity
             android:name=".MainActivity"
